# witwin-maxwell

./: .gitignore  AGENTS.md  CHANGELOG.md  FEATURE_LIST.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: publish-witwin-maxwell.yml
benchmark/: FDFD_PERFORMANCE.md  FDFD_VS_FDTD.md  FDTD_TIDY3D_VALIDATION_REPORT.md  GRID_CONVERGENCE.md  RESULTS.md  __init__.py  __main__.py  array_phase1.py  cache.py  fdfd_performance.py  fdfd_vs_fdtd.py  geometry_cluster_report.py  gpu_memory.py  grid_convergence.py  media_coverage.py  metrics.py  models.py  paths.py  plotting.py  report.py  rf_tidy3d_references.py  rf_validation.py  runner.py  sar_validation.py  tidy3d_scene.py  validation_catalog.py
benchmark/scenes/: __init__.py  _common.py  planned.py
docs/: README.md
docs/assessments/: a12-electrostatics-acceptance-2026-07-19.md  a12_electrostatics_metrics.py  array-active-s-mimo-phase-0-acceptance.md  array-active-s-mimo-phase-1-acceptance.md  array-active-s-mimo-phase-1-qualification.json  array-active-s-mimo-phase-2-acceptance.md  array-active-s-mimo-phase-3-acceptance.md  array-active-s-mimo-phase-4-acceptance.md  b10-sar-acceptance-2026-07-19.md  c13-esd-stress-acceptance-2026-07-19.md  cuda-graph-throughput-2026-07-22.json  d13-breakdown-acceptance-2026-07-19.md  e1-rf-mode-operator-acceptance-2026-07-19.md  e1-rf-modes-acceptance-2026-07-19.md  e2-rf-scenes-acceptance-2026-07-19.md  e3-distributed-adjoint-acceptance-2026-07-19.md  e4-network-coupling-op-stream-2026-07-19.json  e4-network-e2-acceptance-2026-07-19.md  e4a-network-cascade-acceptance-2026-07-19.md  ensemble-speedup-2026-07-17.json  exclusive-timing-window-2026-07-20.md  f1-cosim-e2-acceptance-2026-07-21.md  f2-rf-trio-acceptance-2026-07-21.md  f2a-interior-pec-acceptance-2026-07-21.md  f2b-quasistatic-benches-acceptance-2026-07-21.md  f3-array-scene-vjp-acceptance-2026-07-21.md  f3-array-vjp-acceptance-2026-07-21.md  f4-geometry-cluster-after.json  f4-geometry-cluster-before.json  f4-geometry-cluster-delta.json  f4-subpixel-lever-acceptance-2026-07-21.md  g1-nccl-adjoint-acceptance-2026-07-21.md  g2-lossy-wire-acceptance-2026-07-21.md  g3-ferrite-bias-acceptance-2026-07-21.md  g4-sibc-oblique-acceptance-2026-07-21.md  h1-nccl-driver-acceptance-2026-07-21.md  h2-es-tensor-acceptance-2026-07-21.md  h3-sar-phantom-acceptance-2026-07-21.md  h4-esd-circuit-acceptance-2026-07-21.md  i1-p2p-race-acceptance-2026-07-21.md  (+37 more)
docs/dev/: fdtd_gap_05_guard_census.md  fdtd_gap_05_implementation_status.md  grating-tfsf-bloch-pml-notes.md  tidy3d-feature-coverage-evaluation-2026-07-14.md
docs/memory/: 04-spice-mna-cosimulation-progress-2026-07-16.md  (+12 more)
paper/: CLAUDE.md
scripts/: build_fdtd_cuda_prebuilt.py  perf_cuda_graph_dispersive.py  perf_native_adjoint_reverse.py  verify_cuda_binary_arches.py
tests/: TEST_LAYOUT.md
(+701 files in other folders)
