[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "witwin-maxwell"
version = "0.1.0"
description = "Witwin Maxwell - Electromagnetic simulation (FDTD/FDFD)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]

dependencies = [
    "witwin>=0.0.1",
    "numpy>=1.24",
    "torch>=2.0",
    "scipy>=1.10",
    "slangtorch",
]

[tool.hatch.build.targets.wheel]
packages = ["witwin"]
artifacts = [
    "witwin/maxwell/fdtd/**/*.slang",
    "witwin/maxwell/fdtd/cuda/**/*.cpp",
    "witwin/maxwell/fdtd/cuda/**/*.cu",
    "witwin/maxwell/fdtd/cuda/**/*.cuh",
    "witwin/maxwell/fdtd/cuda/**/*.h",
]
