[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "witwin-maxwell"
version = "0.2.0"
description = "Witwin Maxwell - Electromagnetic simulation (FDTD/FDFD)"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]

dependencies = [
    "witwin>=0.1,<0.2",
    "numpy>=1.24",
    "torch>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
direct = ["nvmath-python[cu12]", "nvidia-cudss-cu12"]

[tool.hatch.build.targets.wheel]
packages = ["witwin"]
artifacts = [
    "witwin/maxwell/fdtd/cuda/**/*.cpp",
    "witwin/maxwell/fdtd/cuda/**/*.cu",
    "witwin/maxwell/fdtd/cuda/**/*.cuh",
    "witwin/maxwell/fdtd/cuda/**/*.h",
    "witwin/maxwell/fdtd/cuda/prebuilt/*.pyd",
    "witwin/maxwell/fdtd/cuda/prebuilt/*.so",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
