[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "witwin-maxwell"
version = "0.4.0"
description = "Witwin Maxwell - Electromagnetic simulation (FDTD/FDFD)"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "LicenseRef-Witwin-Research OR LicenseRef-Witwin-Commercial"
license-files = ["LICENSE"]

dependencies = [
    "witwin>=0.1,<0.2",
    "numpy>=1.24",
    "torch>=2.10",
    "scipy>=1.10",
]

[project.urls]
License = "https://witwin.ai/license"

[project.optional-dependencies]
# CUDA 12 hosts.
direct = ["nvmath-python[cu12]", "nvidia-cudss-cu12"]
# CUDA 13 hosts (matches the torch/cupy cu13 stack used by this project).
direct-cu13 = ["nvmath-python[cu13]", "nvidia-cudss-cu13"]

[tool.hatch.build.targets.wheel]
packages = ["witwin"]
artifacts = [
    "witwin/maxwell/fdtd/cuda/**/*.cpp",
    "witwin/maxwell/fdtd/cuda/**/*.cu",
    "witwin/maxwell/fdtd/cuda/**/*.cuh",
    "witwin/maxwell/fdtd/cuda/**/*.h",
    "witwin/maxwell/fdtd/cuda/prebuilt/*.pyd",
    "witwin/maxwell/fdtd/cuda/prebuilt/*.so",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
